feat(invoice): crud invoice endpoints
